changed all link instances to relative from root

--- a/footer.html
+++ b/footer.html
@@ -137,8 +137,8 @@
         <!-- ---------------------------- -->
 
         <!-- <div class="row justify-content-center mt-4 mb-3">
-            <a href="index.html" class="col-7 col-md-2  text-center">
-                <img src="Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO"class="img-fluid mx-auto">
+            <a href="/index.html" class="col-7 col-md-2  text-center">
+                <img src="/Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO"class="img-fluid mx-auto">
             </a>
         </div> -->
 
@@ -146,19 +146,19 @@
             <div class="col-5 mx-auto">
                 <div class="row align-items-center">
                     <a href="https://rsph.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/ANU_Logo_Colour_White.png" alt="ANU Logo" class="img-fluid mx-auto">
+                        <img src="/Assets/Logos/ANU_Logo_Colour_White.png" alt="ANU Logo" class="img-fluid mx-auto">
                     </a>
                     <a href="https://sii.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto">
+                        <img src="/Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto">
                     </a>
                     <a href="http://graphc.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/GRAPHC_Logo_Small.png" alt="GRAPHC Logo" class="img-fluid">
+                        <img src="/Assets/Logos/GRAPHC_Logo_Small.png" alt="GRAPHC Logo" class="img-fluid">
                     </a>
                     <a href="https://public-health.uq.edu.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/UQ_Logo_White.png" alt="UQ Logo" class="img-fluid mx-auto">
+                        <img src="/Assets/Logos/UQ_Logo_White.png" alt="UQ Logo" class="img-fluid mx-auto">
                     </a>
                     <a href="https://www.apprise.org.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/APPRISE_logo_white.png" alt="APPRISE Logo" class="img-fluid mx-auto">
+                        <img src="/Assets/Logos/APPRISE_logo_white.png" alt="APPRISE Logo" class="img-fluid mx-auto">
                     </a>
                 </div>
             </div>
