--- a/automated_alerts.html
+++ b/automated_alerts.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="style.css">
 
     <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/Assets/favicon_io/site.webmanifest">
     <!-- Header/Footer manager with jquery via https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
@@ -29,8 +29,8 @@
     </script>
     <script> 
         $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html"); 
+        $("#header").load("/header.html"); 
+        $("#footer").load("/footer.html"); 
         });
     </script> 
 </head>
@@ -45,7 +45,7 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-md-7">
-                    <img src="Assets/covid_pexels-photo-3970332.jpeg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
+                    <img src="/Assets/covid_pexels-photo-3970332.jpeg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
                 </div>
                 <div class="col-md-4 p-5">
                     <h1>
@@ -150,7 +150,7 @@
         
                         <br>
                         <br>
-                        Automated alerts are powered by our <a href="data_engine.html">Data Engine</a>.
+                        Automated alerts are powered by our <a href="/data_engine.html">Data Engine</a>.
         
                     </p>
                 </div>
