--- a/dashboards.html
+++ b/dashboards.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="style.css">
 
     <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/Assets/favicon_io/site.webmanifest">
     <!-- Header/Footer manager with jquery via https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
@@ -27,8 +27,8 @@
     </script>
     <script> 
         $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html"); 
+        $("#header").load("/header.html"); 
+        $("#footer").load("/footer.html"); 
         });
     </script> 
 </head>
@@ -46,7 +46,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/465d9e0cd44247b488b8431a56691417" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img title="CRISPER National Summary Dashboard" src="Assets/Screenshots/NationalSummary_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
+                                        <img title="CRISPER National Summary Dashboard" src="/Assets/Screenshots/NationalSummary_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3">CRISPER National Summary Dashboard</h4>
@@ -59,7 +59,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/74e69c2ab40f41c892a652e95373622c" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img title="Interactive Mapping Cases By Postcode (NSW ony)" src="Assets/Screenshots/CasesByPostcode_filter.png" alt="Interactive Mapping Cases By Postcode (NSW ony)" class = "border-bottom border-warning border-4">
+                                        <img title="Interactive Mapping Cases By Postcode (NSW ony)" src="/Assets/Screenshots/CasesByPostcode_filter.png" alt="Interactive Mapping Cases By Postcode (NSW ony)" class = "border-bottom border-warning border-4">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3">Interactive Mapping Tool - Cases by Postcode (NSW & VIC only)</h4>
@@ -83,7 +83,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/743fab0c70204aefa812de611cb7999b" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
-                                        <img title="Interactive Mapping  Tests by Postcode (NSW only) &amp; Contact Tracing Locations" src="Assets/Screenshots/TestsByPostcode_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="Interactive Mapping Tests by Postcode (NSW only) &amp; Contact Tracing Locations" style="display: block; object-fit: cover; object-position: 50% 50%;">
+                                        <img title="Interactive Mapping  Tests by Postcode (NSW only) &amp; Contact Tracing Locations" src="/Assets/Screenshots/TestsByPostcode_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="Interactive Mapping Tests by Postcode (NSW only) &amp; Contact Tracing Locations" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3"> Interactive Mapping Tool - Tests by Postcode (NSW only) & Contact Tracing Alert Locations</h4>
@@ -109,7 +109,7 @@
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/8a59e93e28a54298857e53d83dd158be" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9 ">
-                                        <img src="Assets/Screenshots/NSWPHU_filter.png" class = "border-bottom border-warning border-4">
+                                        <img src="/Assets/Screenshots/NSWPHU_filter.png" class = "border-bottom border-warning border-4">
                                     </div>
                                     <div class="card-body">
                                       <h4 class="card-title lh-base mb-3">NSW COVID-19 Cases by Public Health Unit (PHU)</h4>
