--- a/data_engine.html
+++ b/data_engine.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="style.css">
 
     <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/Assets/favicon_io/site.webmanifest">
 
     <!-- Header/Footer manager with jquery via https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
     <script
@@ -30,8 +30,8 @@
     </script>
     <script> 
         $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html"); 
+        $("#header").load("/header.html"); 
+        $("#footer").load("/footer.html"); 
         });
     </script> 
 </head>
@@ -46,7 +46,7 @@
         <div class="container-fluid ">
             <div class="row align-items-center">
                 <div class="col-md-7">
-                    <img src="Assets/Code_Stock_Photo(From Pexels).jpg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
+                    <img src="/Assets/Code_Stock_Photo(From Pexels).jpg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
                 </div>
                 <div class="col-md-4 px-5 pt-4 pb-0">
                     <h1>
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="col-md">
-                    <a href="data_sources.html" class="card h-100 my-1 text-decoration-none  border border-0 border-dark text-dark"  style="width: 100%;">
+                    <a href="/data_sources.html" class="card h-100 my-1 text-decoration-none  border border-0 border-dark text-dark"  style="width: 100%;">
                         <div class="card-body text-center">
                             <span class="fa-stack fa-3x m-4 hover-grow">
                                 <i class="fa fa-square fa-stack-2x text-dark"></i>
@@ -182,7 +182,7 @@
                         </li>
                     </ul> -->
 
-                    <p>Find our complete sources <a href="data_sources.html">here</a> </p>
+                    <p>Find our complete sources <a href="/data_sources.html">here</a> </p>
                 </div>
 
             </div>
