--- a/data_sources.html
+++ b/data_sources.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="style.css">
 
     <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/Assets/favicon_io/site.webmanifest">
 
     <!-- Header/Footer manager with jquery via https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
     <script
@@ -30,8 +30,8 @@
     </script>
     <script> 
         $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html"); 
+        $("#header").load("/header.html"); 
+        $("#footer").load("/footer.html"); 
         });
     </script> 
 </head>
@@ -52,7 +52,7 @@
                     <div class="col-md-4 col-sm-12">
                             <a href="https://www.covid19.act.gov.au/updates/act-covid-19-statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                                 <!-- <div class="ratio ratio-16x9">
-                                    <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                    <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                                 </div> -->
                                 <!-- <div class="card-body"> -->
                                 <!-- <h5 class="card-title text-center">Australian Capital Territory</h5> -->
@@ -63,7 +63,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">New South Wales</h5> -->
@@ -74,7 +74,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://coronavirus.nt.gov.au/current-status" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">Northern Territory</h5> -->
@@ -85,7 +85,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">Queensland</h5> -->
@@ -96,7 +96,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://www.covid-19.sa.gov.au/home/dashboard" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">South Australia</h5> -->
@@ -107,7 +107,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://www.coronavirus.tas.gov.au/facts/tasmanian-statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">Tasmania</h5> -->
@@ -118,7 +118,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">Victoria</h5> -->
@@ -129,7 +129,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://experience.arcgis.com/experience/359bca83a1264e3fb8d3b6f0a028d768" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">Western Australia</h5> -->
@@ -142,7 +142,7 @@
                     <div class="col-md-4 col-sm-12">
                         <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
-                                <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
+                                <img src="/Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
                             <!-- <div class="card-body"> -->
                             <!-- <h5 class="card-title text-center">Western Australia</h5> -->
