--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="style.css">
 
     <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/Assets/favicon_io/site.webmanifest">
     <!-- Header/Footer manager with jquery via https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
@@ -27,8 +27,8 @@
     </script>
     <script> 
         $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html"); 
+        $("#header").load("/header.html"); 
+        $("#footer").load("/footer.html"); 
         });
     </script> 
 </head>
@@ -52,7 +52,7 @@
                         title="Contact Tracing Map"
                         height="800" width="1300">
                     </iframe> -->
-                    <!--img src="Assets/Contact Tracing.png" alt=""--> 
+                    <!--img src="/Assets/Contact Tracing.png" alt=""--> 
                 </div> 
 
 		<div class="col-md-4 p-5"> 
@@ -159,7 +159,7 @@
             href="https://rsph.anu.edu.au/research/groups/national-centre-geographic-resources-analysis-primary-health-care-graphc">GRAPHC</a>
             team: Michael Hewett and Paul Konings. The
             underlying data is sourced from CRISPER's <a
-            href="data_engine.html">Data Engine</a>.</p>
+            href="/data_engine.html">Data Engine</a>.</p>
     </section>
 
 
