--- a/header.html
+++ b/header.html
@@ -1,38 +1,34 @@
-    <!-- ---------------------- -->
-    <!-- NAVIGATION BAR -->
-    <!-- ---------------------- -->
-    <nav class="container-fluid navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
-        <div class="container">
-            <div class="col-lg-3">
-                <a href="index.html" class="navbar-brand">
-                    <img src="Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO WHITE" srcset="" class="img-fluid">
-                </a>
-            </div>
-
-            <button class="navbar-toggler" 
-                type="button" 
-                data-bs-toggle="collapse" 
-                data-bs-target="#navmenu">
-                
-                <span class="navbar-toggler-icon">
-                </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="exposure_sites.html"
-                class="nav-link">Exposure Sites</a>
-                    </li>                
-                    <li class="nav-item">
-                        <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="dashboards.html" class="nav-link">Dashboards</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="data_engine.html" class="nav-link">Data Engine</a>
-                    </li>
-                </ul>
-            </div>
+<!-- ---------------------- -->
+<!-- NAVIGATION BAR -->
+<!-- ---------------------- -->
+<nav class="container-fluid navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
+    <div class="container">
+        <div class="col-lg-3">
+            <a href="/index.html" class="navbar-brand">
+                <img src="/Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO WHITE" srcset="" class="img-fluid">
+            </a>
         </div>
-    </nav>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+
+            <span class="navbar-toggler-icon">
+            </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a href="/exposure_sites.html" class="nav-link">Exposure Sites</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/automated_alerts.html" class="nav-link">Automated Alerts</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/dashboards.html" class="nav-link">Dashboards</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/data_engine.html" class="nav-link">Data Engine</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
