--- a/mobile_contact_tracing_map.html
+++ b/mobile_contact_tracing_map.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="style.css">
 
     <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="Assets/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/Assets/favicon_io/site.webmanifest">
     <!-- Header/Footer manager with jquery via https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
@@ -27,8 +27,8 @@
     </script>
     <script> 
         $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html"); 
+        $("#header").load("/header.html"); 
+        $("#footer").load("/footer.html"); 
         });
     </script> 
 </head>
@@ -43,14 +43,14 @@
         <div class="container p-0 ">
             <div class="row align-items-center g-5">
                 <div class="col-md-8 text-center">
-                        <img src="Assets/PhoneAppExample_filter.png" alt="" class = "col-10">
+                        <img src="/Assets/PhoneAppExample_filter.png" alt="" class = "col-10">
 
                     <!-- <iframe
                         src="https://mobile.crisper.net.au"
                         title="Contact Tracing Map"
                         height="800" width="1300">
                     </iframe> -->
-                    <!--img src="Assets/Contact Tracing.png" alt=""--> 
+                    <!--img src="/Assets/Contact Tracing.png" alt=""--> 
                 </div> 
 
                 <div class="col"> 
