--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <a href="/exposure_sites.html" class="list-group-item list-group-item-action">Exposure Sites</a>
                             <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
                             <a href="/automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
-                            <a href="/dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
+                            <a href="/dashboards.html" class="list-group-item list-group-item-action">Dashboards</a>
                             <a href="/data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
                             <a href="/data_sources.html" class="list-group-item list-group-item-action">Data Sources</a>
                             <a href="/about_us.html" class = "list-group-item list-group-item-action">About Us</a>
@@ -174,8 +174,8 @@
                                         <img src="/Assets/Screenshots/NationalSummary_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Other Dashboards</h5>
-                                      <p class="card-text">Other useful interactive dashboards developed by ANU’s GRAPHC team for visualising COVID-19 data across Australia. 
+                                      <h5 class="card-title">COVID-19 Dashboards</h5>
+                                      <p class="card-text">Interactive dashboards developed by ANU’s GRAPHC team for visualising COVID-19 data across Australia. 
                                           Including National Summaries dashboard of cases, deaths and testing. </p>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
