--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -60,7 +60,7 @@
 
 
                         <a  href="https://mobile.crisper.net.au/" type="button" class="btn btn-dark my-2">Fullscreen</a>
-                        <button type="button" class="add-to-home-screen btn btn-dark my-2 mx-md-3">Add to Home Screen</button>
+                        <!-- <button type="button" class="add-to-home-screen btn btn-dark my-2 mx-md-3">Add to Home Screen</button> -->
      
                     
 
