--- a/government_resources.html
+++ b/government_resources.html
@@ -49,7 +49,7 @@
             <div class="row g-4 row-cols-md-3">
 
               <div class="col-md">
-                <a href="ehttps://www.covid19.act.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
+                <a href="https://www.covid19.act.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                     <div class="ratio ratio-16x9">
                         <img src="Assets/Logos/gov/act.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                     </div>
