--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -100,7 +100,7 @@
 		  <p><b>NOTES</b></p>
 		  
 		  <p><b>NSW</b><i> Health is only reporting
-		  selected high exposure sites.</i></p>
+		  selected high risk exposure sites.</i></p>
 
 		  <p><b>Victoria</b><i> Health has stopped reporting
 		  exposure sites.</i></p>
