Minor exposure site update

--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -97,12 +97,12 @@
 		  17 August 2021</a>: NSW has stopped posting all
 		  exposure sites to "focus on true risk."</i></p-->
 
-		  <p><b>NOTES</b></p>
+		  <p><b>PLEASE NOTE</b></p>
 		  
-		  <p><b>NSW</b><i> Health is only reporting
+		  <p><b>NSW Health</b><i> is only reporting
 		  selected high risk exposure sites.</i></p>
 
-		  <p><b>Victoria</b><i> Health has stopped reporting
+		  <p><b>Victoria Health</b><i> has stopped reporting
 		  exposure sites.</i></p>
 
 		</div>
