NSW no longer reporting any sites

--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -99,8 +99,8 @@
 
 		  <p><b>PLEASE NOTE</b></p>
 		  
-		  <p><b>NSW Health</b><i> is only reporting
-		  selected high risk exposure sites.</i></p>
+		  <p><b>NSW Health</b><i> has stopped reporting
+		  exposure sites.</i></p>
 
 		  <p><b>Victoria Health</b><i> has stopped reporting
 		  exposure sites.</i></p>
