Acknowledge ANU Medical School

--- a/footer.html
+++ b/footer.html
@@ -33,26 +33,37 @@
                 </div>
 
 
-                <div class="col-lg mx-4">
-                    <small>
-                    <h6>
-                        CRISPER is a collaborative project between
-                    </h6>
-                    <p class="text-justify text-light text">
-                        <ul>
-                            <li>
-                                <a href="https://rsph.anu.edu.au/" target="_blank" class = "hover-text-warning text-light">ANU Research School of Population Health</a>
-                            </li>
-                            <li>
-                                <a href="https://sii.anu.edu.au/" target="_blank" class = "hover-text-warning text-light">ANU Software Innovation Institute</a>
-                            </li>
-                            <li>
-                                <a href="http://graphc.anu.edu.au/" target="_blank" class = "hover-text-warning text-light">ANU GRAPHC</a>
-                            </li>
-                            <li>
-			                    <a href="https://public-health.uq.edu.au/" target="_blank" class = "hover-text-warning text-light">UQ School of Public Health</a>
-                            </li>
-                        </ul>   
+		<div class="col-lg mx-4">
+		  <small>
+		  <h6>
+		  CRISPER is a collaborative project between
+		  </h6>
+		  <p class="text-justify text-light text">
+		  <ul>
+		    
+		    <li> <a href="https://rsph.anu.edu.au/"
+		    target="_blank" class = "hover-text-warning
+		    text-light">ANU Research School of Population
+		    Health</a> </li>
+
+		    <li> <a href="https://sii.anu.edu.au/"
+		    target="_blank" class = "hover-text-warning
+		    text-light">ANU Software Innovation Institute</a>
+		    </li>
+
+		    <li> <a href="http://graphc.anu.edu.au/"
+		    target="_blank" class = "hover-text-warning
+		    text-light">ANU GRAPHC</a> </li>
+
+		    <li> <a href="https://medicalschool.anu.edu.au/"
+		    target="_blank" class = "hover-text-warning
+		    text-light">ANU Medical School</a> </li>
+
+		    <li> <a href="https://public-health.uq.edu.au/"
+		    target="_blank" class = "hover-text-warning
+		    text-light">UQ School of Public Health</a> </li>
+
+		  </ul>   
 
                     <h6>Funding </h6>
                         <p class="text-justify text-light">
@@ -142,27 +153,27 @@
             </a>
         </div> -->
 
-        <div class="row">
-            <div class="col-5 mx-auto">
-                <div class="row align-items-center">
-                    <a href="https://rsph.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="/Assets/Logos/ANU_Logo_Colour_White.png" alt="ANU Logo" class="img-fluid mx-auto">
-                    </a>
-                    <a href="https://sii.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="/Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto">
-                    </a>
-                    <a href="http://graphc.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="/Assets/Logos/GRAPHC_Logo_Small.png" alt="GRAPHC Logo" class="img-fluid">
-                    </a>
-                    <a href="https://public-health.uq.edu.au/" target="_blank" class="col-md">
-                        <img src="/Assets/Logos/UQ_Logo_White.png" alt="UQ Logo" class="img-fluid mx-auto">
-                    </a>
-                    <a href="https://www.apprise.org.au/" target="_blank" class="col-md">
-                        <img src="/Assets/Logos/APPRISE_logo_white.png" alt="APPRISE Logo" class="img-fluid mx-auto">
-                    </a>
-                </div>
-            </div>
-        </div>
+	<div class="row">
+	<div class="col-5 mx-auto">
+	<div class="row align-items-center">
+	  <a href="https://rsph.anu.edu.au/" target="_blank" class="col-md">
+	  <img src="/Assets/Logos/ANU_Logo_Colour_White.png" alt="ANU Logo" class="img-fluid mx-auto">
+	  </a>
+	  <a href="https://sii.anu.edu.au/" target="_blank" class="col-md">
+	  <img src="/Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto">
+	  </a>
+	  <a href="http://graphc.anu.edu.au/" target="_blank" class="col-md">
+	  <img src="/Assets/Logos/GRAPHC_Logo_Small.png" alt="GRAPHC Logo" class="img-fluid">
+	  </a>
+	  <a href="https://public-health.uq.edu.au/" target="_blank" class="col-md">
+	  <img src="/Assets/Logos/UQ_Logo_White.png" alt="UQ Logo" class="img-fluid mx-auto">
+	  </a>
+	  <a href="https://www.apprise.org.au/" target="_blank" class="col-md">
+	  <img src="/Assets/Logos/APPRISE_logo_white.png" alt="APPRISE Logo" class="img-fluid mx-auto">
+	  </a>
+	</div>
+	</div>
+	</div>
 
     </footer>
 
