--- a/about_us.html
+++ b/about_us.html
@@ -236,19 +236,19 @@
 
                             <ul>
                               <li>
-                                Prof Ross Andrews 
+                                Prof Ross Andrews (Queensland Health)
                               </li>
                               <li>
-                                Prof Nigel Stocks
+                                Prof Nigel Stocks (University of Adelaide)
                               </li>
                               <li>
-                                Dr Priyanka Pillai
+                                Dr Priyanka Pillai (University of Melbourne)
                               </li>
                               <li>
-                                Ms Charlee Law
+                                Ms Charlee Law (NSW Health)
                               </li>
                               <li>
-                                Dr Nelson Lau
+                                Dr Nelson Lau (General Practitioner)
                               </li>
                             </ul>
                           </div>
