Update jurisdictions not listing exposure sites

--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -99,11 +99,8 @@
 
 		  <p><b>PLEASE NOTE</b></p>
 		  
-		  <p><b>NSW Health</b><i> has stopped reporting
-		  exposure sites.</i></p>
-
-		  <p><b>Victoria Health</b><i> has stopped reporting
-		  exposure sites.</i></p>
+		  <p><b>NSW, Victoria, Qld, ACT, and Tasmania</b><i>
+		  no longer report exposure sites.</i></p>
 
 		</div>
             </div>
