--- a/dashboards.html
+++ b/dashboards.html
@@ -51,7 +51,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4">
 
                             <div class="col-md-6 col-sm-12">
-                                <a href="https://nationa.crisper.net.au" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
+                                <a href="https://national.crisper.net.au" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                         <img title="COVID National Summary" src="/Assets/Screenshots/CovidNationalSummary_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
