--- a/dashboards.html
+++ b/dashboards.html
@@ -47,21 +47,33 @@
     <!-- CARDS -->
     <!-- ---------------------- -->
     <section class="p-md-5 py-3">
-                    <div class="container">
-                        <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="container">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
 
-                            <div class="col-md-6 col-sm-12">
-                                <a href="https://national.crisper.net.au" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
-                                    <div class="ratio ratio-16x9">
-                                        <img title="COVID National Summary" src="/Assets/Screenshots/CovidNationalSummary_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
-                                    </div>
-                                    <div class="card-body">
-                                      <h4 class="card-title lh-base mb-3">COVID National Summary</h4>
-                                      <p class="card-text">New dashboard of cases, deaths, and tests.  Daily numbers, cumulative numbers, and moving average (7 or 14 days). Filter by dates and states. Updated every 3 hours from health departments and other source data.</p>
-                                      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                                    </div>
-                                </a>
-                            </div>
+    <div class="col-md-6 col-sm-12">
+      <a href="https://national.crisper.net.au"
+      class="card h-100 my-1 text-decoration-none text-dark hover-shadow"
+      style="width: 100%;">
+    <div class="ratio ratio-16x9">
+      <img title="COVID National Summary"
+      src="/Assets/Screenshots/CovidNationalSummary_filter.png"
+      class="w-100 h-100 border-bottom border-warning border-4"
+      alt="COVID National Summary"
+      style="display: block; object-fit: cover; object-position: 50% 50%;">
+    </div>
+    <div class="card-body">
+      <h4 class="card-title lh-base mb-3">COVID National Summary</h4>
+
+      <p class="card-text">Latest dashboard of New Cases (PCR/RAT),
+      Hospitalisations, ICU, and Deaths.  Includes an Overview table
+      of last 24 hours and total numbers. Filter by dates and
+      states. Updated every 3 hours from health departments and other
+      source data.</p>
+      
+      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+    </div>
+    </a>
+    </div>
 
                             <div class="col-md-6 col-sm-12">
                                 <a href="https://graphc.maps.arcgis.com/apps/dashboards/465d9e0cd44247b488b8431a56691417" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
