Remove alerts engine from index page.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h3>CRISPER</h3>
                             <a href="/exposure_sites.html" class="list-group-item list-group-item-action">Exposure Sites</a>
                             <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
-                            <a href="/automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
+                            <!--a href="/automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a-->
                             <a href="/dashboards.html" class="list-group-item list-group-item-action">Dashboards</a>
                             <a href="/data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
                             <a href="/data_sources.html" class="list-group-item list-group-item-action">Data Sources</a>
@@ -158,7 +158,7 @@
                                     </a>
                             </div>
 
-                            <div class="col-md">
+                            <!-- div class="col-md">
                                 <a href="/automated_alerts.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                       <img src="/Assets/automated_alerts_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
@@ -167,11 +167,11 @@
                                       <h5 class="card-title">Automated Alerts</h5>
                                       <p class="card-text"> Sign up for daily or weekly email alerts and situation updates for your specific locations of interest.  
                                           Or generate summary reports and view online.  
-                                        </p>
+                                        </p -->
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                                    </div>
+                                    <!-- /div>
                                 </a>
-                            </div>
+                            </div -->
       
                             <div class="col-md">
                                 <a href="/dashboards.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
