Remove automated alerts

--- a/header.html
+++ b/header.html
@@ -19,9 +19,9 @@
                 <li class="nav-item">
                     <a href="/exposure_sites.html" class="nav-link">Exposure Sites</a>
                 </li>
-                <li class="nav-item">
+                <!-- li class="nav-item">
                     <a href="/automated_alerts.html" class="nav-link">Automated Alerts</a>
-                </li>
+                </li -->
                 <li class="nav-item">
                     <a href="/dashboards.html" class="nav-link">Dashboards</a>
                 </li>
